Fix: Left align action buttons in WhatsApp forms

--- a/src/containers/WaGroups/WaPolls/WaPollsList/WaPollsList.module.css
+++ b/src/containers/WaGroups/WaPolls/WaPollsList/WaPollsList.module.css
@@ -9,7 +9,7 @@
 .Actions {
   width: 30%;
   min-width: 200px;
-  text-align: end;
+  text-align: start;
 }
 
 .LabelText {
